<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_add">

    <fragment
        android:id="@+id/navigation_add"
        android:name="pers.mys1024.android.bills.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_bills"
        android:name="pers.mys1024.android.bills.ui.bills.BillsFragment"
        android:label="@string/title_bills"
        tools:layout="@layout/fragment_bills" />

    <fragment
        android:id="@+id/navigation_tags"
        android:name="pers.mys1024.android.bills.ui.tags.TagsFragment"
        android:label="@string/title_tags"
        tools:layout="@layout/fragment_tags" />
</navigation>